--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,33 +29,32 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/add_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="44dp"
         android:clickable="true"
         android:paddingTop="-10dp"
         android:src="@drawable/ic_plus"
-        app:layout_constraintStart_toEndOf="@+id/text_Chat"
-        app:layout_constraintTop_toTopOf="parent"
-    />
+        app:layout_constraintEnd_toStartOf="@+id/editChat"
+        app:layout_constraintStart_toEndOf="@+id/textUsername"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/editChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:paddingTop="-10dp"
+        android:layout_marginTop="44dp"
         android:clickable="true"
+        android:paddingTop="-10dp"
         android:src="@drawable/ic_points"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/add_chat"
-        app:layout_constraintRight_toRightOf="@+id/add_chat"
-        tools:layout_editor_absoluteY="43dp"
-        />
-    
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/viewSupporter"
         android:layout_width="match_parent"
@@ -68,14 +67,19 @@
         android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:overScrollMode="never"
         android:padding="20dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@id/viewBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewSupporter"
-    />
+        app:layout_constraintVertical_bias="1.0"
+        app:stackFromEnd="true" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -142,7 +146,7 @@
         android:maxLines="1"
         android:layout_marginTop="40dp"
         android:textColor="@color/blackBase"
-        android:textSize="14sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/action_back"
         app:layout_constraintTop_toTopOf="parent" />
