--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,6 +40,9 @@
         <action
             android:id="@+id/action_profile_to_post"
             app:destination="@id/navigation_post" />
+        <action
+            android:id="@+id/action_navigation_profile_to_edit_profile"
+            app:destination="@id/edit_profile" />
     </fragment>
     <fragment
         android:id="@+id/navigation_portfolioPost"
@@ -72,5 +75,10 @@
     <action
         android:id="@+id/action_global_navigation_add_post"
         app:destination="@id/navigation_add_post" />
+    <fragment
+        android:id="@+id/edit_profile"
+        android:name="com.example.artcon_test.ui.settings.EditProfile"
+        android:label="edit_profile"
+        tools:layout="@layout/fragment_edit_profile" />
 
 </navigation>
