--- a/app/src/main/res/layout/activity_view_post.xml
+++ b/app/src/main/res/layout/activity_view_post.xml
@@ -1,57 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context=".ui.post.ViewPostFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-        <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="70dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="4dp">
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/buttonBack"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/topmenu"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:orientation="horizontal"
+                android:padding="4dp">
+
+                <ImageView
+                    android:id="@+id/buttonBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:padding="20dp"
+                    android:src="@drawable/arrow_back"
+                    app:tint="@color/blackBase" />
+
+                <ImageView
+                    android:id="@+id/buttonTopMenu"
+                    android:layout_width="126dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="230dp"
+                    android:layout_weight="1"
+                    android:padding="17dp"
+                    android:src="@drawable/three_dots"
+                    app:tint="@color/blackBase" />
+
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/postFragment"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:src="@drawable/arrow_back"
-                app:tint="@color/blackBase" />
+                android:layout_below="@+id/topmenu"
+                android:layout_weight="1" />
 
-            <ImageView
-                android:id="@+id/buttonTopMenu"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/commentText"
+                android:layout_width="395dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="230dp"
-                android:layout_weight="1"
-                android:padding="17dp"
-                android:src="@drawable/three_dots"
-                app:tint="@color/blackBase" />
+                android:layout_below="@+id/postFragment"
+                android:layout_marginLeft="16dp"
+                android:fontFamily="@font/ubuntu"
+                android:text="Comments"
+                android:textColor="@color/blackBase"
+                android:textSize="18sp" />
 
-        </LinearLayout>
+            <FrameLayout
+                android:id="@+id/commentFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/commentText"
+                android:layout_marginRight="16dp"
 
-        <FrameLayout
-            android:id="@+id/postFragment"
-            android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/grey_border"
+        android:backgroundTint="@color/greyLight"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <EditText
+            android:id="@+id/editTextComment"
+            android:layout_width="284dp"
+            android:layout_height="58dp"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:drawablePadding="10dp"
+            android:hint="Leave a comment"
+            android:imeOptions="actionSearch"
+            android:inputType="textMultiLine"
+            android:maxHeight="90dp"
+            android:padding="2dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp" />
+
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="44dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="9dp"
+            android:layout_marginRight="9dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableEnd="@drawable/send"
+            android:padding="10dp" />
+    </RelativeLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:fontFamily="@font/ubuntu"
-            android:padding="18dp"
-            android:text="Comments"
-            android:textColor="@color/blackBase"
-            android:textSize="18sp" />
 
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
