--- a/app/src/main/res/layout/fragment_accounttype_notartist.xml
+++ b/app/src/main/res/layout/fragment_accounttype_notartist.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="0.056" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="313dp"
         android:layout_height="97dp"
         android:layout_marginVertical="10sp"
@@ -31,12 +32,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.053">
         <RadioButton
+            android:id="@+id/radioButton1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tohire"
             android:textSize="16sp" />
 
         <RadioButton
+            android:id="@+id/radioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tolikeart"
