--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -72,6 +72,9 @@
             android:id="@+id/action_profile_to_post"
             app:destination="@id/navigation_post" />
         <action
+            android:id="@+id/action_navigation_profile_to_edit_profile"
+            app:destination="@id/edit_profile" />
+        <action
             android:id="@+id/action_profile_to_followers"
             app:destination="@id/navigation_followers" />
         <action
@@ -142,9 +145,9 @@
                 app:argType="string" />
         </action>
 
-    <action
-        android:id="@+id/action_global_navigation_add_post"
-        app:destination="@id/navigation_add_post" />
+<!--    <action-->
+<!--        android:id="@+id/action_global_navigation_add_post"-->
+<!--        app:destination="@id/navigation_add_post" />-->
     <fragment
         android:id="@+id/edit_profile"
         android:name="com.example.artcon_test.ui.settings.EditProfile"
